force-app/main/default/objects/OrderLog__c/OrderLog__c.object-meta.xml
<CustomObject>
    <label>Order Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Order Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>