force-app/main/default/objects/OrderLog__c/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <label>Apex Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>