force-app/main/default/objects/OrderLog__c/fields/LogLineNumber__c.field-meta.xml
<CustomField>
    <fullName>LogLineNumber__c</fullName>
    <label>Log Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>