force-app/main/default/objects/OrderLog__c/fields/LogMessage__c.field-meta.xml
<CustomField>
    <fullName>LogMessage__c</fullName>
    <label>Log Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>