force-app/main/default/objects/OrderLog__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>Record Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>