force-app/main/default/objects/OrderLog__c/fields/RunningUser__c.field-meta.xml
<CustomField>
    <fullName>RunningUser__c</fullName>
    <label>Running User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>