force-app/main/default/objects/OrderLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApexMethod__c</columns>
    <columns>LogMessage__c</columns>
    <columns>LogLineNumber__c</columns>
    <columns>RecordId__c</columns>
    <columns>StackTrace__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>